Catched readMetadata exceptions

BUG: 138467

svn path=/trunk/extragear/graphics/gwenview/; revision=616769